removing synergy related stuff

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,13 @@
 <body>
     <img src='icon.png'/>
 
-    <h3>Chemaxon Synergy integration with Node.js</h3>
+    <h3>Chemaxon Synergy integration with Node.js - Boilerplate</h3>
 
     <p id="error"></p>
 
     <div id="notLoggedIn">
-        <a href="/auth/synergy" class="button">Sign in with Synergy</a>
+        <a href="#" class="button">Sign in</a>
+        <p><small>Your app does not authenticates currently with any provider.</small></p>
     </div>
 
     <div id="loggedIn">
@@ -39,16 +40,8 @@
                     $('pre').text('User: ' + JSON.stringify(response, null, 2));
                     $('#signOut').click( function(){
                         $.ajax( "/auth/logout" )
-                            .done(function(response) {
-                                if (response) {
-                                    alert('Good bye, ' + response.email + '! \n'
-                                        + 'Now you are logged out from this app only. \n'
-                                        + 'Do not forget to log out from Synergy, too!');
-                                    window.location.href = '/';
-                                }
-                                else {
-                                    $('#notLoggedIn').fadeIn();
-                                }
+                            .done(function() {
+                                window.location.href = '/';
                             })
                             .fail(function(err) {
                                 console.error(err);
